--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,16 @@
   <groupId>com.github.MananX</groupId>
   <artifactId>androidsdk</artifactId>
   <version>1.0.0</version>
+  
+  <repositories>
+    <repository>
+        <id>google</id>
+        <url>https://maven.google.com</url>
+    </repository>
+</repositories>
+
+  
+  
   <dependencies>
     <dependency>
         <groupId>androidx.core</groupId>
