--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,17 @@
     <dependency>
         <groupId>androidx.core</groupId>
         <artifactId>core-ktx</artifactId>
-        <version>1.9.0</version>
+        <version>1.7.0</version>
     </dependency>
     <dependency>
         <groupId>androidx.activity</groupId>
         <artifactId>activity-ktx</artifactId>
-        <version>1.7.0</version>
+        <version>1.4.0</version>
     </dependency>
     <dependency>
         <groupId>androidx.appcompat</groupId>
         <artifactId>appcompat</artifactId>
-        <version>1.6.1</version>
+        <version>1.4.0</version>
         
         <exclusions>
         <exclusion>
@@ -57,10 +57,25 @@
     </exclusions>
         
     </dependency>
+    
+    <dependency>
+        <groupId>androidx.lifecycle</groupId>
+        <artifactId>lifecycle-runtime</artifactId>
+        <version>2.4.0</version>
+    </dependency>
+    
+    
+    <dependency>
+        <groupId>androidx.lifecycle</groupId>
+        <artifactId>lifecycle-runtime-ktx</artifactId>
+        <version>2.4.0</version>
+    </dependency>
+    
+    
     <dependency>
         <groupId>com.google.android.material</groupId>
         <artifactId>material</artifactId>
-        <version>1.8.0</version>
+        <version>1.5.0</version>
     </dependency>
     <dependency>
         <groupId>com.google.android.gms</groupId>
