--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,33 @@
     </dependency>
     
     <dependency>
+        <groupId>androidx.lifecyle</groupId>
+        <artifactId>lifecycle-common</artifactId>
+        <version>2.0.0</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>androidx.lifecyle</groupId>
+        <artifactId>lifecycle-common</artifactId>
+        <version>2.3.1</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>androidx.lifecyle</groupId>
+        <artifactId>lifecycle-common</artifactId>
+        <version>2.5.1</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>androidx.lifecyle</groupId>
+        <artifactId>lifecycle-common</artifactId>
+        <version>2.4.0</version>
+    </dependency>
+    
+   
+    
+    
+    <dependency>
         <groupId>androidx.lifecycle</groupId>
         <artifactId>lifecycle-runtime</artifactId>
         <version>2.4.0</version>
