--- a/pom.xml
+++ b/pom.xml
@@ -113,24 +113,61 @@
         <artifactId>junit</artifactId>
         <version>4.13.2</version>
         <scope>test</scope>
+        
+          <exclusions>
+    <exclusion>
+      <groupId>androidx.test</groupId>
+      <artifactId>monitor</artifactId>
+      <version>1.6.0</version>
+    </exclusion>
+  </exclusions>
+        
     </dependency>
+    
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>5.1.1</version>
         <scope>test</scope>
+        
+          <exclusions>
+    <exclusion>
+      <groupId>androidx.test</groupId>
+      <artifactId>monitor</artifactId>
+      <version>1.6.0</version>
+    </exclusion>
+  </exclusions>
+        
     </dependency>
     <dependency>
         <groupId>androidx.test.ext</groupId>
         <artifactId>junit</artifactId>
         <version>1.1.5</version>
         <scope>androidTest</scope>
+        
+          <exclusions>
+    <exclusion>
+      <groupId>androidx.test</groupId>
+      <artifactId>monitor</artifactId>
+      <version>1.6.0</version>
+    </exclusion>
+  </exclusions>
+        
     </dependency>
     <dependency>
         <groupId>androidx.test.espresso</groupId>
         <artifactId>espresso-core</artifactId>
         <version>3.5.1</version>
         <scope>androidTest</scope>
+        
+          <exclusions>
+    <exclusion>
+      <groupId>androidx.test</groupId>
+      <artifactId>monitor</artifactId>
+      <version>1.6.0</version>
+    </exclusion>
+  </exclusions>
+        
     </dependency>
 </dependencies>
 
