--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,17 @@
     </repository>
 </repositories>
 
+<dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>androidx.lifecycle</groupId>
+      <artifactId>lifecycle-viewmodel</artifactId>
+      <version>2.5.1</version>
+    </dependency>
+  </dependencies>
+</dependencyManagement>
+
+
 <dependencies>
     <dependency>
         <groupId>androidx.core</groupId>
